# game-engine-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
include/engine/: Engine.hpp  Game.hpp
include/engine/api/: AssetsAPI.hpp  EntityAPI.hpp  EventsAPI.hpp  InputAPI.hpp  ManagerAPI.hpp  ScenesAPI.hpp  TimeAPI.hpp  TimerAPI.hpp  WindowAPI.hpp
include/engine/assets/: AssetDatabase.hpp  AssetHandle.hpp  AssetManager.hpp
include/engine/core/audio/: Audio.hpp
include/engine/core/events/: ConnectionSlot.hpp  Connections.hpp  Event.hpp  EventBus.hpp  EventConnectionGroup.hpp  Listener.hpp  QueuedEvent.hpp  Signal.hpp
include/engine/core/graphics/: Renderer.hpp  RendererSystem.hpp  Texture.hpp
include/engine/entities/: Entity.hpp  EntityBuilder.hpp  EntityManager.hpp  EntityState.hpp  EntityStateFlags.hpp  LifetimeState.hpp
include/engine/scenes/: Scene.hpp  SceneCommand.hpp  SceneConcept.hpp  SceneManager.hpp  SceneRegistry.hpp
include/engine/systems/: RenderSystem.hpp
include/engine/time/: Time.hpp  Timer.hpp  TimerManager.hpp
include/game/: SpaceShooterGame.hpp
include/game/factories/: BulletFactory.hpp  PlayerFactory.hpp
include/game/managers/: GameManager.hpp
include/game/scenes/: GameplayScene.hpp
src/: main.cpp
src/engine/: Engine.cpp
src/engine/entities/: Entity.cpp  EntityManager.cpp
src/engine/scenes/: SceneManager.cpp
src/engine/systems/: RenderSystem.cpp
src/engine/time/: Time.cpp  Timer.cpp  TimerManager.cpp
src/game/: SpaceShooterGame.cpp
src/game/factories/: BulletFactory.cpp  PlayerFactory.cpp
src/game/managers/: GameManager.cpp
src/game/scenes/: GameplayScene.cpp
vendors/: CMakeLists.txt
vendors/glm/: CMakeLists.txt
vendors/sdl3/: CMakeLists.txt
vendors/sdl3_image/: CMakeLists.txt
vendors/sdl3_mixer/: CMakeLists.txt
vendors/sdl3_ttf/: CMakeLists.txt
(+48 files in other folders)
